# cpp

./: .gitignore  README.md
_template/: CMakeLists.txt  main.cpp
_template/lib/: CMakeLists.txt  utility.cpp  utility.h
_template/src/: CMakeLists.txt  main.cpp
_template/test/: CMakeLists.txt  utility_test.cpp
